[gd_scene load_steps=15 format=3 uid="uid://sm62jyuxfra"]

[ext_resource type="Script" uid="uid://casluawpspadc" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Theme" uid="uid://c0i5xgm4tqjan" path="res://ui/blue_theme.tres" id="2_ok7cu"]
[ext_resource type="StyleBox" uid="uid://b21fmnriptb66" path="res://ui/panel_theme.tres" id="3_27fn8"]
[ext_resource type="ButtonGroup" uid="uid://dnrx7s5syn0bd" path="res://ui/suspect_button_group.tres" id="4_irxef"]
[ext_resource type="Texture2D" uid="uid://68mmmdc4igkr" path="res://art/char/white.png" id="4_nltto"]
[ext_resource type="Texture2D" uid="uid://bt45laqifn1d6" path="res://art/char/green.png" id="4_waa4j"]
[ext_resource type="Texture2D" uid="uid://y7r7i3fpji20" path="res://art/char/black.png" id="5_ok7cu"]
[ext_resource type="Texture2D" uid="uid://bkvspqsbnc322" path="res://art/char/select_mask.png" id="6_e2l4f"]
[ext_resource type="Texture2D" uid="uid://dwqi33h6wkuyw" path="res://art/char/red.png" id="6_irxef"]
[ext_resource type="Texture2D" uid="uid://vt6uol6aikbw" path="res://art/char/yellow.png" id="7_e2l4f"]
[ext_resource type="Texture2D" uid="uid://t16n2wm3gof0" path="res://art/char/blue.png" id="8_n5rqp"]
[ext_resource type="Texture2D" uid="uid://okmjip2xi7xn" path="res://art/blackmail.png" id="12_cxd00"]
[ext_resource type="Texture2D" uid="uid://dobex1iw4hwov" path="res://art/invitation.png" id="13_etlur"]
[ext_resource type="Texture2D" uid="uid://di55v6og4q6vb" path="res://art/report.png" id="14_7rqds"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fyqef")

[node name="PersonsBox" type="PanelContainer" parent="."]
visible = false
z_index = 10
custom_minimum_size = Vector2(200, 200)
offset_left = 324.0
offset_top = 107.0
offset_right = 971.0
offset_bottom = 555.0
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="PersonsBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PersonsBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Persons of Interest"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PersonsBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2

[node name="WhiteButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("4_nltto")
texture_pressed = ExtResource("6_e2l4f")

[node name="GreenButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("4_waa4j")
texture_pressed = ExtResource("6_e2l4f")

[node name="BlackButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("5_ok7cu")
texture_pressed = ExtResource("6_e2l4f")

[node name="RedButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("6_irxef")
texture_pressed = ExtResource("6_e2l4f")

[node name="YellowButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("7_e2l4f")
texture_pressed = ExtResource("6_e2l4f")

[node name="BlueButton" type="TextureButton" parent="PersonsBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("8_n5rqp")
texture_pressed = ExtResource("6_e2l4f")

[node name="GridContainer" type="GridContainer" parent="PersonsBox/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Alias"

[node name="AliasValue" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mr. White"

[node name="Label3" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Occupation"

[node name="OccupationValue" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "CEO of Whitestone"

[node name="AlibiLabel" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Alibi"

[node name="AlibiValue" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "N/A"

[node name="StatementsLabel" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Statements"

[node name="StatementsValue" type="Label" parent="PersonsBox/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
text = "Statements"
autowrap_mode = 2

[node name="EvidenceBox" type="PanelContainer" parent="."]
visible = false
z_index = 10
custom_minimum_size = Vector2(200, 200)
offset_left = 324.0
offset_top = 107.0
offset_right = 971.0
offset_bottom = 555.0
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="EvidenceBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="EvidenceBox/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="EvidenceBox/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Evidence"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EvidenceCloseButton" type="Button" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="EvidenceBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BlackmailButton" type="TextureButton" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("12_cxd00")

[node name="InvitationButton" type="TextureButton" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("13_etlur")

[node name="ReportButton" type="TextureButton" parent="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
button_group = ExtResource("4_irxef")
texture_normal = ExtResource("14_7rqds")

[node name="MarginContainer" type="MarginContainer" parent="EvidenceBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="EvidenceLabel" type="Label" parent="EvidenceBox/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
autowrap_mode = 2

[node name="AccuseBox" type="PanelContainer" parent="."]
visible = false
z_index = 10
custom_minimum_size = Vector2(200, 200)
offset_left = 324.0
offset_top = 107.0
offset_right = 971.0
offset_bottom = 555.0
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="AccuseBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="AccuseBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Make an Accusation"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="AccuseBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Perpetrator"

[node name="Perpetrator" type="OptionButton" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "Mr. White"
popup/item_0/id = 0
popup/item_1/text = "Mrs. Green"
popup/item_1/id = 1
popup/item_2/text = "Mr. Black"
popup/item_2/id = 2
popup/item_3/text = "Mrs. Red"
popup/item_3/id = 3
popup/item_4/text = "Mr. Yellow"
popup/item_4/id = 4
popup/item_5/text = "Ms. Blue"
popup/item_5/id = 5

[node name="Label2" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Motive"

[node name="Motive" type="OptionButton" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Suicide"
popup/item_0/id = 0
popup/item_1/text = "Financial Gain"
popup/item_1/id = 1
popup/item_2/text = "Jealousy"
popup/item_2/id = 2
popup/item_3/text = "Revenge for not being promoted"
popup/item_3/id = 3
popup/item_4/text = "To cover another crime"
popup/item_4/id = 4

[node name="Label4" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Accomplice"

[node name="Accomplice" type="OptionButton" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Mrs. Green"
popup/item_1/id = 1
popup/item_2/text = "Mr. Black"
popup/item_2/id = 2
popup/item_3/text = "Mrs. Red"
popup/item_3/id = 3
popup/item_4/text = "Mr. Yellow"
popup/item_4/id = 4
popup/item_5/text = "Ms. Blue"
popup/item_5/id = 5

[node name="Label3" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Accomplice Motive"

[node name="AccompliceMotive" type="OptionButton" parent="AccuseBox/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Financial Gain"
popup/item_1/id = 1
popup/item_2/text = "Jealousy"
popup/item_2/id = 2
popup/item_3/text = "Revenge"
popup/item_3/id = 3
popup/item_4/text = "Blackmailed"
popup/item_4/id = 4

[node name="Control" type="Control" parent="AccuseBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="IncorrectLabel" type="Label" parent="AccuseBox/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.13999999, 0.15433311, 1)
text = "Incorrect!"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="AccuseBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AccuseCommitButton" type="Button" parent="AccuseBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Accuse!"

[node name="VictoryBox" type="PanelContainer" parent="."]
visible = false
z_index = 10
custom_minimum_size = Vector2(200, 200)
offset_left = 311.0
offset_top = 217.0
offset_right = 958.0
offset_bottom = 417.0
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="VictoryBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VictoryBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "You were correct!"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VictoryBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VictoryLabel" type="Label" parent="VictoryBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You solved the case!"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="VictoryBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Replay" type="Button" parent="VictoryBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to menu"

[node name="Control3" type="Control" parent="VictoryBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DialogueBox" type="PanelContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -158.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="DialogueBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1

[node name="TextureRect" type="TextureRect" parent="DialogueBox/MarginContainer/HBox"]
layout_mode = 2
texture = ExtResource("5_ok7cu")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20

[node name="Dialogue" type="Label" parent="DialogueBox/MarginContainer/HBox/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.13999999, 0.7993335, 1, 1)
theme_override_colors/font_shadow_color = Color(0.036399994, 0.11093336, 0.26, 0.39607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 24
text = "asdfasdfasdfa asdfasdfasdfa asdfasdfasdfa asdfasdfasdfa asdfasdfasdfa asdfasdfasdfa asdfasdfasdfa "
autowrap_mode = 2

[node name="QuestionBox" type="PanelContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -109.619995
offset_right = 298.0
offset_bottom = 194.38013
grow_vertical = 2
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="QuestionBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HappenedButton" type="Button" parent="QuestionBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "What happened?"

[node name="WhoButton" type="Button" parent="QuestionBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Who are you?"

[node name="WhereButton" type="Button" parent="QuestionBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Where were you?"

[node name="SuspectButton" type="Button" parent="QuestionBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Who do you suspect?"

[node name="CloseButton" type="Button" parent="QuestionBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "That's all."

[node name="PresentBox" type="PanelContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -247.0
offset_right = 292.0
offset_bottom = -116.0
grow_vertical = 2
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="PresentBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PresentBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PresentBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Present"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PresentBox/MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BlackmailPresentButton" type="TextureButton" parent="PresentBox/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_cxd00")
ignore_texture_size = true
stretch_mode = 5

[node name="InvitationPresentButton" type="TextureButton" parent="PresentBox/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_etlur")
ignore_texture_size = true
stretch_mode = 5

[node name="ReportPresentButton" type="TextureButton" parent="PresentBox/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("14_7rqds")
ignore_texture_size = true
stretch_mode = 5

[node name="ShortcutsBox" type="PanelContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 332.0
offset_bottom = 78.0
theme = ExtResource("2_ok7cu")
theme_override_styles/panel = ExtResource("3_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="ShortcutsBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShortcutsBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuButton" type="Button" parent="ShortcutsBox/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="SuspectsButton" type="Button" parent="ShortcutsBox/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Persons"

[node name="EvidenceButton" type="Button" parent="ShortcutsBox/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Evidence"

[node name="AccuseButton" type="Button" parent="ShortcutsBox/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Accuse"

[connection signal="pressed" from="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/EvidenceCloseButton" to="." method="_on_evidence_close_button_pressed"]
[connection signal="pressed" from="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer/BlackmailButton" to="." method="_on_blackmail_button_pressed"]
[connection signal="pressed" from="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer/InvitationButton" to="." method="_on_invitation_button_pressed"]
[connection signal="pressed" from="EvidenceBox/MarginContainer/VBoxContainer/HBoxContainer/ReportButton" to="." method="_on_report_button_pressed"]
[connection signal="button_up" from="AccuseBox/MarginContainer/VBoxContainer/AccuseCommitButton" to="." method="_on_accuse_commit_button_button_up"]
[connection signal="pressed" from="AccuseBox/MarginContainer/VBoxContainer/AccuseCommitButton" to="." method="_on_accuse_commit_button_pressed"]
[connection signal="pressed" from="VictoryBox/MarginContainer/VBoxContainer/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="QuestionBox/MarginContainer/VBoxContainer/HappenedButton" to="." method="_on_happened_button_pressed"]
[connection signal="pressed" from="QuestionBox/MarginContainer/VBoxContainer/WhoButton" to="." method="_on_who_button_pressed"]
[connection signal="pressed" from="QuestionBox/MarginContainer/VBoxContainer/WhereButton" to="." method="_on_where_button_pressed"]
[connection signal="pressed" from="QuestionBox/MarginContainer/VBoxContainer/SuspectButton" to="." method="_on_suspect_button_pressed"]
[connection signal="pressed" from="QuestionBox/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PresentBox/MarginContainer/VBoxContainer/HBoxContainer/BlackmailPresentButton" to="." method="_on_blackmail_present_button_pressed"]
[connection signal="pressed" from="PresentBox/MarginContainer/VBoxContainer/HBoxContainer/InvitationPresentButton" to="." method="_on_invitation_present_button_pressed"]
[connection signal="pressed" from="PresentBox/MarginContainer/VBoxContainer/HBoxContainer/ReportPresentButton" to="." method="_on_report_present_button_pressed"]
[connection signal="pressed" from="ShortcutsBox/MarginContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ShortcutsBox/MarginContainer/HBoxContainer/SuspectsButton" to="." method="_on_suspects_button_pressed"]
[connection signal="pressed" from="ShortcutsBox/MarginContainer/HBoxContainer/EvidenceButton" to="." method="_on_evidence_button_pressed"]
[connection signal="pressed" from="ShortcutsBox/MarginContainer/HBoxContainer/AccuseButton" to="." method="_on_accuse_button_pressed"]
